2008-04-25 [colin]	3.4.0cvs12

	* src/Makefile.am
	* src/w32-logo.ico
	* src/w32-resource.rc
		Patch from Marcus Brinkmann to set an icon on w32.

2008-04-24 [colin]	3.4.0cvs11

	* src/inc.c
	* src/inc.h
		Trace inc locks
	* src/ldif.c
	* src/ldif.h
		Fix bug 1581, 'Bad File Format during Import LDIF':
		Use dynamically allocated buffers; also, allow 
		importing contacts with no email address

2008-04-24 [colin]	3.4.0cvs10

	* src/prefs_common.c
		Increment the timeout a bit on OpenBSD, 75 isn't enough

2008-04-23 [colin]	3.4.0cvs9

	* src/compose.c
	* src/prefs_folder_item.c
	* src/prefs_template.c
	* src/quote_fmt.c
		Fix bug 1576: Fix unescaping of templates when testing them
		I think it breaks nothing. (wwp, you're welcome to double-check)

2008-04-23 [paul]	3.4.0cvs8

	* manual/advanced.xml
		add info about the "two_line_vertical" hidden
		pref

2008-04-22 [paul]	3.4.0cvs7

	* src/prefs_common.c
	* src/prefs_common.h
	* src/summaryview.c
		make the 2-line view in summaryview when in three
		columns mode configurable. hidden pref: "two_line_vertical"

2008-04-22 [colin]	3.4.0cvs6

	* src/inc.c
		Fix missing inc_unlock()
	* src/prefs_matcher.c
	* src/send_message.c
		Fix my last commit

2008-04-22 [colin]	3.4.0cvs5

	* src/etpan/imap-thread.c
		Use g_(un)setenv instead of (un)setenv which
		doesn't exist on IRIX 6.5

2008-04-22 [colin]	3.4.0cvs4

	* src/inc.c
	* src/prefs_common.c
	* src/send_message.c
		Fix bug 1566, 'too short I/O timeout on OpenBSD'
		Set the default timeout to 75 seconds

2008-04-20 [colin]	3.4.0cvs3

	* src/pixmaps/tray_newmail.offline.xpm
	* src/pixmaps/tray_newmail.xpm
	* src/pixmaps/tray_newmarkedmail.offline.xpm
	* src/pixmaps/tray_newmarkedmail.xpm
	* src/pixmaps/tray_nomail.offline.xpm
	* src/pixmaps/tray_nomail.xpm
	* src/pixmaps/tray_unreadmail.offline.xpm
	* src/pixmaps/tray_unreadmail.xpm
	* src/pixmaps/tray_unreadmarkedmail.offline.xpm
	* src/pixmaps/tray_unreadmarkedmail.xpm
		Make the tray icons a bit nicer. Would be